svc_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: openshift
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
