tmt.yaml
apiVersion: v1
kind: Template
metadata:
  name: webhoock
objects:
- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: nginx
    namespace: openshift
  data:
    default_hoock.conf: |
      server {
        listen 80;
        server_name  _;
        location / {
          proxy_pass ${HOOCK};
        }
      }
- kind: DeploymentConfig
  apiVersion: "apps.openshift.io/v1"
  metadata:
    name: nginx
    labels:
      app: nginx
    namespace: openshift
  spec:
    replicas: 1
    selector:
      app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/conf.d
              readOnly: true
        volumes:
        - name: nginx
          configMap:
            name: nginx
            items:
              - key: default_hoock.conf
                path: default.conf
    triggers:
    - type: "ConfigChange"
- kind: Service
  apiVersion: v1
  metadata:
    name: nginx
    namespace: openshift
  spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
    selector:
      app: nginx
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: nginx
    namespace: default
  spec:
    path: /
    to:
      kind: Service
      name: nginx
    port:
      targetPort: 8080
parameters:
- name: HOOCK
  description: URL
  value: https://kubernetes.io
